--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700;900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .swiper {
@@ -74,4 +74,39 @@
 
 .borderStyle {
   border: 1px solid gray;
+}
+
+.logo {
+  text-shadow: blue 1px 1px;
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+.logo:hover {
+  filter: drop-shadow(0 0 1rem #646cffaa);
+}
+
+.logo2 {
+  text-shadow: black 1px 1px;
+}
+
+/* Customize the scrollbar track */
+::-webkit-scrollbar {
+  width: 15px; /* Change the width as desired */
+  height: 10px;
+}
+
+/* Customize the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(
+    45deg,
+    #008000,
+    #ffffff,
+    #ff9933
+  ); /* Change to your desired color */
+  border-radius: 2px; /* Round the corners of the thumb */
+}
+
+/* Customize the scrollbar track (the background) */
+::-webkit-scrollbar-track {
+  background-color: #f0f0f0; /* Change to your desired color */
 }
