--- a/app/globals.css
+++ b/app/globals.css
@@ -110,3 +110,52 @@
 ::-webkit-scrollbar-track {
   background-color: #f0f0f0; /* Change to your desired color */
 }
+
+.cube {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  animation: rotate 5s infinite linear;
+  color: red;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  to {
+    transform: rotateX(360deg) rotateY(360deg);
+  }
+}
+
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.8);
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 10px rgba(220, 24, 24, 0.5);
+}
+
+/* Define styles for each face (front, back, right, left, top, bottom) */
+.front {
+  transform: translateZ(24px);
+}
+.back {
+  transform: rotateY(180deg) translateZ(24px);
+}
+.right {
+  transform: rotateY(90deg) translateZ(24px);
+}
+.left {
+  transform: rotateY(-90deg) translateZ(24px);
+}
+.top {
+  transform: rotateX(90deg) translateZ(24px);
+}
+.bottom {
+  transform: rotateX(-90deg) translateZ(24px);
+}
