--- a/app/globals.css
+++ b/app/globals.css
@@ -111,6 +111,10 @@
   background-color: #f0f0f0; /* Change to your desired color */
 }
 
+.skillsPoint:hover {
+  background: linear-gradient(45deg, #008000, #ffffff, #ff9933);
+}
+
 .bg-custom {
   background-image: url("/online.jpg"); /* Replace with the path to your image */
   background-size: cover;
